<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InsertarBBDD">

    <TextView
            android:text="@string/titulo"
            android:layout_width="182dp"
            android:layout_height="24dp" android:id="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="72dp"
            app:layout_constraintHorizontal_bias="0.497"/>
    <TextView
            android:text="@string/marca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.156"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtMarca"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtMarca"
            android:layout_marginLeft="49dp" android:layout_marginStart="49dp"
            app:layout_constraintStart_toEndOf="@+id/textView2" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="84dp"
            app:layout_constraintHorizontal_bias="0.039"/>
    <TextView
            android:text="@string/modelo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.156" app:layout_constraintBaseline_toBaselineOf="@+id/txtModelo"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtModelo"
            app:layout_constraintStart_toEndOf="@+id/textView3" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="48dp" app:layout_constraintTop_toBottomOf="@+id/txtMarca"
            app:layout_constraintHorizontal_bias="0.409"/>
    <LinearLayout android:layout_height="210dp"
                  android:layout_width="329dp"
                  android:layout_alignParentLeft="true"
                  android:layout_alignParentStart="true"
                  android:orientation="vertical"
                  android:layout_alignParentRight="true"
                  android:layout_alignParentEnd="true"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/txtModelo"
                  android:layout_marginTop="64dp" app:layout_constraintHorizontal_bias="0.647"
                  android:id="@+id/linearLayout">

        <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="158dp">

            <RadioButton
                    android:text="@string/deportivo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton3"
                    android:layout_weight="1"/>
            <RadioButton
                    android:text="@string/turismo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton2"
                    android:layout_weight="1"/>

            <RadioButton
                    android:text="@string/cuatro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton"
                    android:layout_weight="1"/>


        </RadioGroup>


        <Button
                android:text="@string/anadir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button"/>

    </LinearLayout>
    <TextView
            android:text="@string/tipoCoche"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout" android:layout_marginBottom="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>